compiler/tests/pass/import_package/math/helper.afns
package math.helper;

pub fn inc(v: i32) -> i32 {
    return v + 1;
}
