compiler/tests/fail/circular_import/cyc/b.afns
package cyc.b;

import cyc.a;

pub fn ping() -> i32 {
    return 1;
}
